[gd_scene load_steps=3 format=3 uid="uid://bpxb2ldvvf3a7"]

[ext_resource type="Script" uid="uid://bahvui3tuexwf" path="res://SlotButton.gd" id="1_5v8q7"]
[ext_resource type="Script" uid="uid://c2dl7qimt3113" path="res://InventoryUI.gd" id="1_gf3dx"]

[node name="InventoryUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_gf3dx")

[node name="MainPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(1152, 648)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 3.0
offset_right = 222.0
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.84, 0.810126)

[node name="TabContainer" type="TabContainer" parent="MainPanel"]
custom_minimum_size = Vector2(1366, 768)
layout_mode = 2
current_tab = 0

[node name="InventoryTab" type="Control" parent="MainPanel/TabContainer"]
custom_minimum_size = Vector2(1366, 768)
layout_mode = 2
metadata/_tab_index = 0

[node name="PokemonGrid" type="GridContainer" parent="MainPanel/TabContainer/InventoryTab"]
clip_children = 2
clip_contents = true
custom_minimum_size = Vector2(683, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 50.0
grow_vertical = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 3

[node name="TextureButton1" type="TextureButton" parent="MainPanel/TabContainer/InventoryTab/PokemonGrid"]
clip_contents = true
custom_minimum_size = Vector2(14, 14)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("1_5v8q7")

[node name="TextureButton2" type="TextureButton" parent="MainPanel/TabContainer/InventoryTab/PokemonGrid"]
clip_contents = true
custom_minimum_size = Vector2(14, 14)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("1_5v8q7")
slot_index = 1

[node name="TextureButton3" type="TextureButton" parent="MainPanel/TabContainer/InventoryTab/PokemonGrid"]
clip_contents = true
custom_minimum_size = Vector2(14, 14)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("1_5v8q7")
slot_index = 2

[node name="TextureButton4" type="TextureButton" parent="MainPanel/TabContainer/InventoryTab/PokemonGrid"]
clip_contents = true
custom_minimum_size = Vector2(14, 14)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("1_5v8q7")
slot_index = 3

[node name="TextureButton5" type="TextureButton" parent="MainPanel/TabContainer/InventoryTab/PokemonGrid"]
clip_contents = true
custom_minimum_size = Vector2(14, 14)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("1_5v8q7")
slot_index = 4

[node name="TextureButton6" type="TextureButton" parent="MainPanel/TabContainer/InventoryTab/PokemonGrid"]
clip_contents = true
custom_minimum_size = Vector2(14, 14)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("1_5v8q7")
slot_index = 5

[node name="TextureButton7" type="TextureButton" parent="MainPanel/TabContainer/InventoryTab/PokemonGrid"]
clip_contents = true
custom_minimum_size = Vector2(14, 14)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("1_5v8q7")
slot_index = 6

[node name="TextureButton8" type="TextureButton" parent="MainPanel/TabContainer/InventoryTab/PokemonGrid"]
clip_contents = true
custom_minimum_size = Vector2(14, 14)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("1_5v8q7")
slot_index = 7

[node name="TextureButton9" type="TextureButton" parent="MainPanel/TabContainer/InventoryTab/PokemonGrid"]
clip_contents = true
custom_minimum_size = Vector2(14, 14)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("1_5v8q7")
slot_index = 8

[node name="TextureButton10" type="TextureButton" parent="MainPanel/TabContainer/InventoryTab/PokemonGrid"]
clip_contents = true
custom_minimum_size = Vector2(14, 14)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("1_5v8q7")
slot_index = 9

[node name="TextureButton11" type="TextureButton" parent="MainPanel/TabContainer/InventoryTab/PokemonGrid"]
clip_contents = true
custom_minimum_size = Vector2(14, 14)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("1_5v8q7")
slot_index = 10

[node name="TextureButton12" type="TextureButton" parent="MainPanel/TabContainer/InventoryTab/PokemonGrid"]
clip_contents = true
custom_minimum_size = Vector2(14, 14)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("1_5v8q7")
slot_index = 11

[node name="PokemonDetails" type="VBoxContainer" parent="MainPanel/TabContainer/InventoryTab"]
custom_minimum_size = Vector2(683, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
grow_horizontal = 0
grow_vertical = 2

[node name="PokemonSprite" type="TextureRect" parent="MainPanel/TabContainer/InventoryTab/PokemonDetails"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
expand_mode = 1
stretch_mode = 5

[node name="PokemonName" type="Label" parent="MainPanel/TabContainer/InventoryTab/PokemonDetails"]
layout_mode = 2
size_flags_vertical = 6
horizontal_alignment = 1

[node name="PokemonStats" type="RichTextLabel" parent="MainPanel/TabContainer/InventoryTab/PokemonDetails"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
bbcode_enabled = true
fit_content = true
scroll_following = true

[node name="CollectiblesTab" type="Control" parent="MainPanel/TabContainer"]
visible = false
custom_minimum_size = Vector2(1366, 768)
layout_mode = 2
metadata/_tab_index = 1

[node name="CollectiblesList" type="ScrollContainer" parent="MainPanel/TabContainer/CollectiblesTab"]
custom_minimum_size = Vector2(342, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2

[node name="CollectiblesContainer" type="VBoxContainer" parent="MainPanel/TabContainer/CollectiblesTab/CollectiblesList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CollectibleDetails" type="VBoxContainer" parent="MainPanel/TabContainer/CollectiblesTab"]
custom_minimum_size = Vector2(1024, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
grow_horizontal = 0
grow_vertical = 2

[node name="CollectibleSprite" type="TextureRect" parent="MainPanel/TabContainer/CollectiblesTab/CollectibleDetails"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
stretch_mode = 5

[node name="CollectibleDescription" type="RichTextLabel" parent="MainPanel/TabContainer/CollectiblesTab/CollectibleDetails"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
bbcode_enabled = true
fit_content = true
